--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="Bureau des Sports IUT Saint-Nazaire">
-    <meta name="og:image" content="">
+    <meta name="og:image" content="./img/bds-logo-shark.png">
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
 
@@ -129,7 +129,7 @@
 
         <div class="presentation">
             <h2>Présentation</h2>
-            <h3>Le BDS favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS de
+            <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS de
                 Saint-Nazaire, en organisant
                 divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
                 favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
