--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body>
 
-    <header id="nav-menu"  style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
@@ -73,11 +73,13 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/actus" style="color: #292c2f;">Evènements à
+                                        <a class="dropdown-link" href="/evenements/actus"
+                                            style="color: #292c2f;">Evènements à
                                             venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/inscription" style="color: #292c2f;">S'inscrire
+                                        <a class="dropdown-link" href="/evenements/inscription"
+                                            style="color: #292c2f;">S'inscrire
                                             aux évènements</a>
                                     </li>
                                 </ul>
@@ -92,12 +94,14 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements
+                                        <a class="dropdown-link" href="/classements/equipes"
+                                            style="color: #292c2f;">Classements
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classements
+                                        <a class="dropdown-link" href="/classements/promotion"
+                                            style="color: #292c2f;">Classements
                                             des
                                             promotions</a>
                                     </li>
@@ -129,11 +133,15 @@
 
         <div class="presentation">
             <h2>Présentation</h2>
-            <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS de
+            <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS
+                de
                 Saint-Nazaire, en organisant
                 divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
                 favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
-                cadre des la compétitions que dans sa vie professionnelle.
+                cadre des la compétitions que dans sa vie professionnelle. Nous avons pour but d’organiser divers
+                événements sportifs et festifs pour les
+                1500 étudiants de l’IUT de Saint-Nazaire ainsi que de dynamiser la vie étudiante de chacun des étudiants
+                de l'IUT.
             </h3>
         </div>
 
@@ -164,7 +172,7 @@
 
         <br></br>
 
-        
+
         <!--<div class="instagram-widget">
             <div class="instagram-widget1">
                 <blockquote class="instagram-media" data-instgrm-captioned
@@ -368,7 +376,9 @@
         </div>
 
         <div class="footer-left">
-            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i
+                    class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;"></i><b
+                    style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
