--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -13,7 +13,7 @@
     <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>BDS - Equipes</title>
-    <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
+    <meta name="description"
+        content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
@@ -70,10 +71,12 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/actus" style="color: #292c2f;">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/actus"
+                                            style="color: #292c2f;">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/inscription" style="color: #292c2f;">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="/evenements/inscription"
+                                            style="color: #292c2f;">S'inscrire aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -87,11 +90,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Classements des
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Classement des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classements des
+                                        <a class="dropdown-link" href="/classements/promotion"
+                                            style="color: #292c2f;">Classement des
                                             promotions</a>
                                     </li>
                                 </ul>
@@ -114,10 +118,10 @@
         </div>
     </header>
 
-    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <h1>Classements des équipes inscrites :</h1>
+    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1200px">
+        <h1>Classement des équipes inscrites :</h1>
         <br><br>
-        
+
         <table id="example" class="display" cellspacing="0" width="100%">
             <thead>
                 <tr>
@@ -130,7 +134,7 @@
             </thead>
 
             <tbody>
-                <tr>
+                <tr class="team1">
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
@@ -139,6 +143,12 @@
                 </tr>
             </tbody>
         </table>
+
+        <br><br>
+
+        <!--<h1>Explication du classement :</h1>
+        <h2>1 - Présentation</h2>
+        <h3></h3>-->
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
@@ -150,7 +160,9 @@
         </div>
 
         <div class="footer-left">
-            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i
+                    class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;"></i><b
+                    style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
