--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -76,12 +76,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements
+                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Classements des
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Classements de
                                             promotions</a>
                                     </li>
                                 </ul>
