--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/classements/equipes"
-                                            style="color: #292c2f;">Classements
+                                            style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/classements/promotion"
-                                            style="color: #292c2f;">Classements
+                                            style="color: #292c2f;">Classement
                                             des
                                             promotions</a>
                                     </li>
