--- a/etudiants.html
+++ b/etudiants.html
@@ -84,11 +84,11 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements des
+                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classements des
+                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classement des
                                             promotions</a>
                                     </li>
                                 </ul>
