--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -80,12 +80,12 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classements
+                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classements
+                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classement
                                             des
                                             promotions</a>
                                     </li>
