--- a/reseau.html
+++ b/reseau.html
@@ -57,7 +57,7 @@
             <div class="s-icon">
                 <i class="fa fa-sign-in"></i>
             </div>
-            <span><a href="/social/inscription" target=”_blank”>Inscription bds</a></span>
+            <span><a href="/social/inscription" target=”_blank”>Inscription</a></span>
         </div>
         <div class="button">
             <div class="s-icon">
