--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -122,14 +122,14 @@
                 <input type="hidden" name="_autoresponse"
                     value="Bonjour, nous vous confirmons la demande de participation au prochain évènement.">
 
-                <input id="name" type="text" name="Capitaine" placeholder="Prénom - nom du capitaine" required="">
+                <input id="name" type="text" name="Capitaine" placeholder="Nom et prénom du capitaine" required="">
                 <input id="email" type="email" name="Email" placeholder="Votre email" required="">
                 <input id="number" type="text" name="Numéro&nbsp;de&nbsp;téléphone"
                     placeholder="Votre numéro de téléphone" required="">
-                <input id="subject" type="text" name="Nom&nbsp;de&nbsp;votre&nbsp;équipe" placeholder="Nom d'équipe"
+                <input id="subject" type="text" name="Nom&nbsp;de&nbsp;votre&nbsp;équipe" placeholder="Nom de votre équipe"
                     required="">
                 <textarea name="Participants"
-                    placeholder="Indiquez les noms de tous les étudiants participant au tournoi (Minimum 5, maximum 10)"></textarea>
+                    placeholder="Indiquez les noms et prénom de tous les étudiants participant au tournoi (minimum 5, maximum 8)"></textarea>
                 <button type="submit">Envoyer</button>
                 <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de
                     chaque
