--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -170,7 +170,7 @@
                                         <li class="list-inline-item">26 octobre 2023</li>
                                     </ul>
                                     <h5 class="post-title mb-3 mt-3">
-                                        <a href="#">Tournoi d'athlétisme ouvert à tous !</a>
+                                        <a href="#">Tournoi d'athlétisme ouvert aux inscriptions !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
                                         Rendez vous au <a href="https://maps.app.goo.gl/HyaieeVUmpzhkPey6" target="_blank" style="color: #292c2f; text-decoration: underline;">Stade d'Athlétisme Léo Lagrange</a> à partir de 14h30 !
@@ -230,7 +230,7 @@
                                         <li class="list-inline-item">30 novembre 2023</li>
                                     </ul>
                                     <h5 class="post-title mb-3 mt-3">
-                                        <a href="#">Touroi Basket ouvert à tous !</a>
+                                        <a href="#">Tournoi Basket</a>
                                     </h5>
                                     <p class="excerpt mb-0">
                                         Rendez vous au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic" target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de 14h30 !
@@ -260,7 +260,7 @@
                                         <li class="list-inline-item">14 décembre 2023</li>
                                     </ul>
                                     <h5 class="post-title mb-3 mt-3">
-                                        <a href="#">Tournoi Futsal ouvert à tous !</a>
+                                        <a href="#">Tournoi Futsal</a>
                                     </h5>
                                     <p class="excerpt mb-0">
                                         Rendez vous au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic" target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de 14h30 !
