--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -170,7 +170,7 @@
                                         <li class="list-inline-item">26 octobre 2023</li>
                                     </ul>
                                     <h5 class="post-title mb-3 mt-3">
-                                        <a href="#">Tournoi d'athlétisme ouvert aux inscriptions !</a>
+                                        <a href="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-d-athletisme">Tournoi d'athlétisme ouvert aux inscriptions !</a>
                                     </h5>
                                     <p class="excerpt mb-0">
                                         Rendez vous au <a href="https://maps.app.goo.gl/HyaieeVUmpzhkPey6" target="_blank" style="color: #292c2f; text-decoration: underline;">Stade d'Athlétisme Léo Lagrange</a> à partir de 14h30 !
