--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -106,8 +106,55 @@
         </div>
     </header>
 
-    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
-        <h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>
+    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1200px">
+        <h1>Classement des promotions :</h1>
+        <br><br>
+
+        <table id="example" class="display" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>Promotion</th>
+                    <th>Points</th>
+                    <th>Rang</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr class="mlt">
+                    <td>MLT</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="tc">
+                    <td>TC</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="gcgp">
+                    <td>GCGP</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="mp">
+                    <td>MP</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="gim">
+                    <td>GIM</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="gccd">
+                    <td>GCCD</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <br><br>
+        <!--<h1><a href="https://bdsiutsn.fr" style="color: #292c2f;">Retour à l'Accueil</a></h1>-->
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
