--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -127,6 +127,7 @@
                 <tr>
                     <th>Nom d'équipe</th>
                     <th>Points</th>
+                    <th>Rang</th>
                     <th>Membres</th>
                     <th>Participations</th>
                     <th>Capitaine</th>
@@ -135,6 +136,7 @@
 
             <tbody>
                 <tr class="team1">
+                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
