--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -42,6 +42,16 @@
 </head>
 
 <body>
+      <script type="text/javascript" charset="utf-8">
+        $(document).ready(function () {
+            $('#example').DataTable({
+                responsive: true,
+                pagingType: "simple",
+                pageLength: 10
+            })
+        });
+    </script>
+    
     <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="https://bdsiutsn.fr">
