--- a/success-contact.html
+++ b/success-contact.html
@@ -50,7 +50,8 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href=/">Accueil</a></li>
-                        <li>
+                        <li><a class="nav-link" href="/evenements">Evènements</a></li>
+                        <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
                                 Evènements
@@ -65,7 +66,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </li>
+                        </li>-->
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
