--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -2,29 +2,33 @@
 <html lang="fr">
 
 <head>
-    <script src="./table/jquery-1.9.1.js"></script>
-    <script src="./table/jquery-ui.js"></script>
-    <script src="./app.js" defer></script>
-    <script src="./table/jquery.dataTables.min.js"></script>
-    <script src="./table/dataTables.responsive.js"></script>
-    <link href="./table/dataTables.responsive.css" rel="stylesheet" />
-    <link href="./table/jquery.dataTables.css" rel="stylesheet" />
-    <link href="./table/jquery-ui.js" />
-    <link href="./css/footer.css" rel="stylesheet" />
+    <script src="../table/jquery-1.9.1.js"></script>
+    <script src="../table/jquery-ui.js"></script>
+    <script src="../app.js" defer></script>
+    <script src="../table/jquery.dataTables.min.js"></script>
+    <script src="../table/dataTables.responsive.js"></script>
+    <link href="../table/dataTables.responsive.css" rel="stylesheet" />
+    <link href="../table/jquery.dataTables.css" rel="stylesheet" />
+    <link href="../table/jquery-ui.js" />
+    <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
+
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/bds-logo-shark.png">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Contact</title>
-    <meta name="description" content="">
+    <title>BDS - Actualités</title>
+    <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="country" content="France">
@@ -44,12 +48,12 @@
     <header style="padding: 0.5rem; margin: 0 auto;" id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
+                <img src="../img/bds-logo-shark.png" class="shark" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href=/">Accueil</a></li>
+                        <li><a class="nav-link" href="/">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -61,7 +65,7 @@
                                         <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Tournoi Futsal</a>
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi Futsal</a>
                                     </li>
                                 </ul>
                             </div>
@@ -86,6 +90,7 @@
                                     </li>
                                 </ul>
                             </div>
+
                         </li>
                         <li><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
@@ -104,16 +109,22 @@
         </div>
     </header>
 
-    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <div class="containers">
-            <div class="title"></div>
-            <h3 class="zdpjvzelk">Merci pour votre demande !</h3>
-            <br></br>
-            <h2 class="zdpjvzelk">Nous vous répondrons par mail incéssamment sous peu !</h2>
-            <br></br>
-            <p><a href="/" style="color: #292c2f; ">Retour à l'Accueil</a></p>
+    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
+
+        <div class="titles">
+            <h1 style="color:#292c2f;">Inscription Tournoi de Futsal</h3>
         </div>
-        </div>
+
+        <p class="excerpt mb-0" style="font-size: 1.5em; align-items: center; justify-content: center;">
+            Venez participer au tournoi de futsal organisé par le Bureau des sports de l'IUT de Saint-Nazaire ! Une buvette sera disponible tout au long du tournoi.
+            Rendez vous le jeudi 26 octobre 2023 au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic" target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de 14h30 !
+            <br></br>
+            Attention, le prix du billet est le montant d'insription d'une équipe et non pas d'un participant !
+        </p>
+
+        <iframe id="haWidget" allowtransparency="true" scrolling="auto"
+        src="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-futsal/widget"
+        style="width: 100%; height: 750px; border: none;"></iframe>
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
@@ -129,6 +140,7 @@
         </div>
 
     </footer>
+
 </body>
 
 </html>
