--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Tournoi Futsal</a>
+                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Inscription Tournoi Futsal</a>
                                     </li>
                                 </ul>
                             </div>
