--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -145,6 +145,16 @@
                     <td>-</td>
                     <td>-</td>
                 </tr>
+                <tr class="polytech">
+                    <td>POLYTECH</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr class="cesi">
+                    <td>CESI</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
             </tbody>
         </table>
 
