--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -28,7 +28,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <title>BDS - Actualités</title>
-    <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
+    <meta name="description"
+        content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="country" content="France">
@@ -62,10 +63,12 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements"
+                                            style="color: #292c2f;">Tous les evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi Futsal</a>
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi
+                                            Futsal</a>
                                     </li>
                                 </ul>
                             </div>
@@ -79,12 +82,14 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/equipes"
+                                            style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/promotion"
+                                            style="color: #292c2f;">Classement
                                             des
                                             promotions</a>
                                     </li>
@@ -116,13 +121,18 @@
         </div>
 
         <p class="excerpt mb-0" style="font-size: 1.5em; align-items: center; justify-content: center;">
-            Venez participer au tournoi de futsal organisé par le Bureau des sports de l'IUT de Saint-Nazaire ! Une buvette sera disponible tout au long du tournoi.
-            Rendez vous le jeudi 26 octobre 2023 au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic" target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de 14h30 !
+            Venez participer au tournoi de futsal organisé par le Bureau des sports de l'IUT de Saint-Nazaire ! Une
+            buvette sera disponible tout au long du tournoi.
+            Rendez vous le jeudi 26 octobre 2023 au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic"
+                target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de
+            14h30 !
             <br></br>
             Attention, le prix du billet est le montant d'insription d'une équipe et non pas d'un participant !
         </p>
 
-        
+        <iframe id="haWidget" allowtransparency="true" scrolling="auto"
+            src="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-futsal/widget"
+            style="width: 100%; height: 750px; border: none;"></iframe>
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
@@ -134,7 +144,9 @@
         </div>
 
         <div class="footer-left">
-            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;" ></i><b style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
+            <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i
+                    class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;"></i><b
+                    style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
