--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -127,7 +127,7 @@
                 target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de
             14h30 !
             <br></br>
-            Attention, le prix du billet est le montant d'insription d'une équipe et non pas d'un participant !
+            Attention, le prix du billet est le montant d'inscription d'une équipe et non pas d'un participant !
         </p>
 
         <iframe id="haWidget" allowtransparency="true" scrolling="auto"
