--- a/reseau.html
+++ b/reseau.html
@@ -33,6 +33,15 @@
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2MGP41PJSW');
+</script> 
 
 <body>
 
