--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -40,6 +40,15 @@
 
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2MGP41PJSW');
+</script>
 
 <body>
       <script type="text/javascript" charset="utf-8">
