--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,15 @@
     <meta name="og:image:height" content="">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-2MGP41PJSW');
+</script>
 <!--<div class="spacer" data-height="1000"></div>-->
 
 <body>
