--- a/etudiants.html
+++ b/etudiants.html
@@ -37,7 +37,15 @@
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-2MGP41PJSW');
+</script>
 
 <body>
     <script type="text/javascript" charset="utf-8">
