--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -42,7 +42,15 @@
     <meta name="og:image:height" content="">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MGP41PJSW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-2MGP41PJSW');
+</script>
 
 <body>
     <header style="padding: 0.5rem; margin: 0 auto;" id="nav-menu" aria-label="navigation bar">
