--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -27,7 +27,7 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Actualités</title>
+    <title>BDS - Futsal</title>
     <meta name="description"
         content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
