--- a/contact.html
+++ b/contact.html
@@ -147,11 +147,9 @@
 
         <br></br>
 
-        <div class="titless">
+        <!--<div class="titless">
             <h3>Ou bien contactez les membres du Bureau !</h3>
         </div>
-
-        <br></br>
 
         <section class="nav-contact">
             <ul class="all-ul">
@@ -192,7 +190,7 @@
                     </li>
                 </ul>
             </ul>
-        </section>
+        </section>-->
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
