--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -143,12 +143,12 @@
 
             <tbody>
                 <tr class="team1">
+                    <td>Les Chefs</td>
                     <td>-</td>
                     <td>-</td>
+                    <td>7</td>
                     <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td>Hadrien LEROY</td>
                 </tr>
             </tbody>
         </table>
