--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -135,6 +135,7 @@
                     <th>Promotion</th>
                     <th>Points</th>
                     <th>Rang</th>
+                    <th>Equipes</th>
                 </tr>
             </thead>
 
@@ -143,9 +144,11 @@
                     <td>MLT</td>
                     <td>-</td>
                     <td>-</td>
+                    <td>1</td>
                 </tr>
                 <tr class="tc">
                     <td>TC</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
@@ -153,9 +156,11 @@
                     <td>GCGP</td>
                     <td>-</td>
                     <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr class="mp">
                     <td>MP</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
@@ -163,9 +168,11 @@
                     <td>GIM</td>
                     <td>-</td>
                     <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr class="gccd">
                     <td>GCCD</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
@@ -173,9 +180,11 @@
                     <td>POLYTECH</td>
                     <td>-</td>
                     <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr class="cesi">
                     <td>CESI</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
