--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -133,9 +133,10 @@
             <thead>
                 <tr>
                     <th>Nom d'équipe</th>
-                    <th>Points</th>
-                    <th>Rang</th>
+                    <th>Promotion</th>
                     <th>Membres</th>
+                    <th>Rang</th>
+                    <th>Points</th>
                     <th>Participations</th>
                     <th>Capitaine</th>
                 </tr>
@@ -144,9 +145,10 @@
             <tbody>
                 <tr class="team1">
                     <td>Les Chefs</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td>MLT</td>
                     <td>7</td>
+                    <td>-</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>Hadrien LEROY</td>
                 </tr>
