--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,9 @@
                                         <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
+                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
+                                    </li>
+                                    <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Inscription Tournoi Futsal</a>
                                     </li>
                                 </ul>
