--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -75,6 +75,9 @@
                                             style="color: #292c2f;">Tous les evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
+                                        <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat multisports</a>
+                                    </li>
+                                    <li role="menuitem">
                                         <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi
                                             Futsal</a>
                                     </li>
