--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -155,6 +155,15 @@
                     <td>-</td>
                     <td>Hadrien LEROY</td>
                 </tr>
+                <tr class="team1">
+                    <td>Joga Bonito</td>
+                    <td>TC</td>
+                    <td>6</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
             </tbody>
         </table>
 
