--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -162,7 +162,7 @@
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
-                    <td>-</td>
+                    <td>Gatien BARBIER</td>
                 </tr>
             </tbody>
         </table>
