--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -155,7 +155,7 @@
                     <td>-</td>
                     <td>Hadrien LEROY</td>
                 </tr>
-                <tr class="team1">
+                <tr class="team2">
                     <td>Joga Bonito</td>
                     <td>TC</td>
                     <td>6</td>
@@ -163,6 +163,15 @@
                     <td>-</td>
                     <td>-</td>
                     <td>Gatien BARBIER</td>
+                </tr>
+                <tr class="team3">
+                    <td>Taraji</td>
+                    <td>GCGP</td>
+                    <td>7</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>Brahim DALIL</td>
                 </tr>
             </tbody>
         </table>
